syntax = "proto3";
package TournamentAssistantShared.Models.Packets;

option csharp_namespace = "TournamentAssistantShared.Models.Packets";

message Command {
	enum CommandTypes {
		Heartbeat = 0;
        ReturnToMenu = 1;
        ScreenOverlay_ShowPng = 2;
        ScreenOverlay_ShowGreen = 3;
        DelayTest_Finish = 4;
	}

    CommandTypes command_type = 1;
}