syntax = "proto3";
package TournamentAssistantShared.Models.Packets;

option csharp_namespace = "TournamentAssistantShared.Models.Packets";

message Connect {
	enum ConnectTypes {
		Player = 0;
		Coordinator = 1;
		TemporaryConnection = 2;
	}

	ConnectTypes client_type = 1;
	string name = 2;
	string password = 3;
	string user_id = 4;
	int32 client_version = 5;
}