syntax = "proto3";
package TournamentAssistantShared.Models.Packets;

option csharp_namespace = "TournamentAssistantShared.Models.Packets";

import "protobuf/Models/gameplay_parameters.proto";

message PlaySong {
	GameplayParameters gameplay_parameters = 1;
	bool floating_scoreboard = 2;
	bool stream_sync = 3;
	bool disable_pause = 4;
	// bool disable_fail = 5;
	bool disable_scoresaber_submission = 6;
	bool show_normal_notes_on_stream = 7;
}